--- a/Reading_Stringer_database_general.ipynb
+++ b/Reading_Stringer_database_general.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,10 +384,10 @@
     "    neurons_per_layer = []\n",
     "    index_group = []\n",
     "    for g in groups:\n",
-    "        index_group.append(np.array([int(x) for x in (z_depth>=g[0])*(z_depth<=g[1])]))\n",
+    "        index_group.append(np.array([x for x,j in enumerate((z_depth>=g[0])*(z_depth<=g[1])) if j>0]))\n",
     "        neurons_per_layer.append(len(index_group[-1]))\n",
     "        \n",
-    "    minimal_neuron_count = int(min(neurons_per_layer)*0.9)\n",
+    "    minimal_neuron_count = int(min(neurons_per_layer)*1)\n",
     "    \n",
     "    for layer in range(len(groups)):\n",
     "#         trained_models.append([])\n",
@@ -397,31 +397,19 @@
     "\n",
     "        index = index_group[layer]\n",
     "        random.shuffle(index)\n",
-    "        pca_layers_zscore.append(pca_model.fit_transform(XData[index[:minimal_neuron_count]].T))\n",
+    "        pca = pca_layer_model.fit_transform(XData[index[:minimal_neuron_count]].T)\n",
+    "        pca_layers_zscore.append(pca)\n",
     "\n",
     "#             trained_models[-1].append([])\n",
     "        #predictions[-1].append([])\n",
+    "        \n",
+    "        tm, mse, r2, pdct = general_decoder(pca_layers_zscore[layer],yData,pars,trials)\n",
+    "        MSE[layer,:] = np.array(mse)\n",
+    "        R2[layer,:] = np.array(r2)\n",
+    "#        trained_models[layer].append(tm)\n",
+    "#        predictions[layer].append(pdct)\n",
     "\n",
-    "        for j in range(trials):\n",
-    "\n",
-    "            X_train, X_test, y_train, y_test = split_dataset(pca_layers_zscore[layer],yData,trials,j,T)\n",
-    "\n",
-    "            if len(pars)>0:   \n",
-    "                model_tf = create_custom_model(X_train.shape[1], 1, [100,100], name='model_tf',activation = ['relu','tanh'])\n",
-    "                model = model_tf()\n",
-    "                model.fit(X_train,y_train,batch_size=pars[0],epochs=pars[1],verbose=pars[2],validation_data=(X_test, y_test),callbacks=[pars[3]])\n",
-    "            else:\n",
-    "                model = linear_model.LinearRegression()\n",
-    "                model.fit(X_train,y_train)\n",
-    "\n",
-    "#                 trained_models[-1].append(model)\n",
-    "\n",
-    "            y_pred = model.predict(X_test)\n",
-    "            #predictions[-1].append([y_pred,y_test,X_test])\n",
-    "            R2[layer,j] = sk.metrics.r2_score(y_test,y_pred)\n",
-    "            MSE[layer,j] = sk.metrics.mean_squared_error(y_test,y_pred,squared=False)\n",
-    "\n",
-    "            print(layer,j)\n",
+    "        print(layer)\n",
     "\n",
     "    return minimal_neuron_count, MSE, R2, predictions"
    ]
@@ -772,237 +760,6 @@
     "    \n",
     "    scipy.io.savemat(dirf+mice_names[MOUSE_IND]+'_nonstim_decoding.mat',mouse_decoding)\n",
     "    print(MOUSE_IND)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9147"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index_group = []\n",
-    "neurons_per_layer = []\n",
-    "for g in [[125,255],[375,475],[125,475]]:\n",
-    "        index_group.append(np.array([int(x) for x in (dat['med'].T[-1]>=g[0])*(dat['med'].T[-1]<=g[1])]))\n",
-    "        neurons_per_layer.append(len(index_group[-1]))\n",
-    "        \n",
-    "int(min(neurons_per_layer)*0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10164, 10164, 10164]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neurons_per_layer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pupilArea': array([429.26063107, 399.88105512, 376.05531559, ..., 267.88240838,\n",
-       "        265.16514464, 263.10144715]),\n",
-       " 'runSpeed': array([0., 0., 0., ..., 0., 0., 0.]),\n",
-       " 'xyz': array([[732,   4,  70],\n",
-       "        [146,   6,  70],\n",
-       "        [328,   6,  70],\n",
-       "        ...,\n",
-       "        [376, 686, 420],\n",
-       "        [434, 796, 420],\n",
-       "        [  8, 964, 420]], dtype=uint16),\n",
-       " 'size': array([0.71861471, 0.39075232, 0.48844039, ..., 0.69209977, 1.06934764,\n",
-       "        1.35564426]),\n",
-       " 'neurons_used_per_layer': 9147,\n",
-       " 'neurons_in_both_layers': 9147,\n",
-       " 'decoding': {'all_neurons': {'Linear': {'Pupil_Area': {'R2': [0.5509220293569901,\n",
-       "      0.5546306723167584,\n",
-       "      0.23434909810489524,\n",
-       "      0.46505038869104,\n",
-       "      0.5135939885348504,\n",
-       "      0.6753653665054996,\n",
-       "      0.19433809130841195,\n",
-       "      0.4934837294055179,\n",
-       "      0.5598334255850183,\n",
-       "      0.6490562005267287,\n",
-       "      0.6736219019605845,\n",
-       "      0.5991516216489682,\n",
-       "      0.45469385834877774,\n",
-       "      0.3295978630031332,\n",
-       "      0.5739057903613904],\n",
-       "     'MSE': [0.21310985703238594,\n",
-       "      0.21453138793458207,\n",
-       "      0.27822569403079117,\n",
-       "      0.24599168245970424,\n",
-       "      0.2379863972258714,\n",
-       "      0.18052665017111957,\n",
-       "      0.18287922314691007,\n",
-       "      0.19075649969010303,\n",
-       "      0.19720957420475416,\n",
-       "      0.18374897730148462,\n",
-       "      0.1821163696258421,\n",
-       "      0.18592430832343096,\n",
-       "      0.1877413954949946,\n",
-       "      0.19739998942409728,\n",
-       "      0.2000258538082088]},\n",
-       "    'Speed': {'R2': [0.630458385233245,\n",
-       "      0.6534619555336094,\n",
-       "      0.49829735021397514,\n",
-       "      0.5144411652872658,\n",
-       "      0.47126120008995775,\n",
-       "      0.6958525694198499,\n",
-       "      0.09565462595228713,\n",
-       "      0.4811119071429484,\n",
-       "      0.41681781307373167,\n",
-       "      0.6010187670108744,\n",
-       "      0.594441262830306,\n",
-       "      0.6113739708551452,\n",
-       "      0.5242012453532308,\n",
-       "      0.4828811962767571,\n",
-       "      0.6829158049955337],\n",
-       "     'MSE': [0.0777689569434092,\n",
-       "      0.08843684646514949,\n",
-       "      0.1282412766768743,\n",
-       "      0.11930769512326574,\n",
-       "      0.11735789075910878,\n",
-       "      0.07579124125249809,\n",
-       "      0.040053600706527755,\n",
-       "      0.04768971674418886,\n",
-       "      0.05642793081618827,\n",
-       "      0.056785989642994035,\n",
-       "      0.05913689807640668,\n",
-       "      0.05243130733852223,\n",
-       "      0.044167730893710816,\n",
-       "      0.045845215798819894,\n",
-       "      0.05889136009337498]}},\n",
-       "   'FFNN': {'Pupil_Area': {'R2': [0.5805926585827371,\n",
-       "      0.5939908604958017,\n",
-       "      0.3541403994971136,\n",
-       "      0.4873032255854354,\n",
-       "      0.540245880304723,\n",
-       "      0.7094721224488219,\n",
-       "      0.10775883322096169,\n",
-       "      0.4637414319941804,\n",
-       "      0.6029657953679779,\n",
-       "      0.676141627352862,\n",
-       "      0.7047914152233596,\n",
-       "      0.6291875402569248,\n",
-       "      0.4912493422201092,\n",
-       "      0.3748845907625603,\n",
-       "      0.5946532205372125],\n",
-       "     'MSE': [0.20594946879327458,\n",
-       "      0.20483237253293018,\n",
-       "      0.2555352955068085,\n",
-       "      0.24082095665010134,\n",
-       "      0.23137449418735864,\n",
-       "      0.17078031252412848,\n",
-       "      0.19245494803469612,\n",
-       "      0.1962771604868035,\n",
-       "      0.18729812380671337,\n",
-       "      0.17651585002139555,\n",
-       "      0.17320202771845492,\n",
-       "      0.17882295544225152,\n",
-       "      0.18133946872113985,\n",
-       "      0.190616079224266,\n",
-       "      0.19509524296685393]},\n",
-       "    'Speed': {'R2': [0.6029449104712026,\n",
-       "      0.6358581498257706,\n",
-       "      0.20304778168916582,\n",
-       "      0.5357929393946625,\n",
-       "      0.5243148958099503,\n",
-       "      0.6474552646131753,\n",
-       "      -0.26614853922863646,\n",
-       "      0.641399035849389,\n",
-       "      0.5053894432800461,\n",
-       "      0.6830127559396739,\n",
-       "      0.5248379810157573,\n",
-       "      0.6144280053998463,\n",
-       "      0.5389251632839892,\n",
-       "      0.6425301703078123,\n",
-       "      0.711878164513059],\n",
-       "     'MSE': [0.08061205298296704,\n",
-       "      0.09065527610112883,\n",
-       "      0.16162955506349372,\n",
-       "      0.11665501031494402,\n",
-       "      0.11131443362665003,\n",
-       "      0.08159885421041531,\n",
-       "      0.047393276292220496,\n",
-       "      0.03964547421044424,\n",
-       "      0.051966526715110206,\n",
-       "      0.0506157711485012,\n",
-       "      0.06401069153397071,\n",
-       "      0.05222488413817357,\n",
-       "      0.04347896007512029,\n",
-       "      0.038116986032643976,\n",
-       "      0.056137410182896315]}}},\n",
-       "  'layers': {'layer2_3': {'Linear': {'Pupil_Area': {'R2': array([-0.02937774, -0.26582204, -0.97380641, -0.00176676, -0.35260341]),\n",
-       "      'MSE': array([0.32264879, 0.37832022, 0.28640421, 0.31038065, 0.29566244])},\n",
-       "     'Speed': {'R2': array([ 0.01462073, -0.12833294, -1.33196613, -0.06389548, -0.34814712]),\n",
-       "      'MSE': array([0.12699198, 0.18187211, 0.06431844, 0.09272076, 0.07434697])}},\n",
-       "    'FFNN': {'Pupil_Area': {'R2': array([-0.09971954, -0.81626696, -1.75801916, -0.01292821, -0.23526831]),\n",
-       "      'MSE': array([0.33349063, 0.45317201, 0.3385523 , 0.31210496, 0.28254756])},\n",
-       "     'Speed': {'R2': array([-0.09711195, -0.13659964, -4.53748719, -0.1378136 , -1.39978317]),\n",
-       "      'MSE': array([0.13399854, 0.18253713, 0.09911303, 0.09588773, 0.09919291])}}},\n",
-       "   'layer4': {'Linear': {'Pupil_Area': {'R2': array([-2.86472854e-02, -5.90056758e+00, -9.81827195e-01, -3.02699638e-03,\n",
-       "             -3.57668863e-01]),\n",
-       "      'MSE': array([0.3225343 , 0.88331507, 0.28698554, 0.31057582, 0.29621554])},\n",
-       "     'Speed': {'R2': array([ 0.01330842, -0.1302931 , -1.33933823, -0.07935572, -0.32970689]),\n",
-       "      'MSE': array([0.12707652, 0.18203001, 0.06442003, 0.09339202, 0.07383676])}},\n",
-       "    'FFNN': {'Pupil_Area': {'R2': array([-0.23950911, -0.50715785, -0.80895446, -0.09197768, -0.38903646]),\n",
-       "      'MSE': array([0.35405239, 0.41281227, 0.27418326, 0.32405462, 0.29961789])},\n",
-       "     'Speed': {'R2': array([-0.24043519, -0.25027353, -1.62327288, -0.20061903, -0.69887146]),\n",
-       "      'MSE': array([0.14248254, 0.19144762, 0.06821755, 0.09849861, 0.08345933])}}},\n",
-       "   'both_layers': {'Linear': {'Pupil_Area': {'R2': array([[-0.02876925, -0.41212348, -0.98440499, -0.00206648, -0.36064   ]]),\n",
-       "      'MSE': array([[0.32255342, 0.39958536, 0.28717213, 0.31042708, 0.29653949]])},\n",
-       "     'Speed': {'R2': array([[ 0.0126811 , -0.34087039, -1.32399634, -0.06553503, -0.34033172]]),\n",
-       "      'MSE': array([[0.12711691, 0.19826263, 0.06420844, 0.09279217, 0.07413116]])}},\n",
-       "    'FFNN': {'Pupil_Area': {'R2': array([[-0.07900341, -0.32032793, -1.96625855, -0.11360157, -0.58861257]]),\n",
-       "      'MSE': array([[0.3303346 , 0.38637955, 0.35110065, 0.32724743, 0.32042022]])},\n",
-       "     'Speed': {'R2': array([[-0.02763795, -0.18484571, -5.50454879, -0.83484042, -0.5995378 ]]),\n",
-       "      'MSE': array([[0.12968647, 0.18637101, 0.10741947, 0.12176617, 0.08098263]])}}}}}}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neuron_count, SPEEDMSE_linearDEPTH_all, SPEEDR2_linearDEPTH_all, SPEEDpredictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,groups=[[125,475]],pars=[])"
    ]
   },
   {
